--- a/package.json
+++ b/package.json
@@ -3,9 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "@emotion/core": "^10.0.16",
+    "axios": "^0.19.0",
+    "babel-preset-es2015": "^6.24.1",
+    "formik": "^2.0.3",
+    "history": "^4.10.1",
+    "moment": "^2.24.0",
+    "plow-js": "^2.2.0",
+    "ramda": "^0.26.1",
+    "re-reselect": "^1.0.1",
+    "react": "^16.9.0",
+    "react-country-region-selector": "^1.4.3",
+    "react-datepicker": "^2.0.0",
+    "react-dom": "^16.9.0",
+    "react-places-autocomplete": "^7.2.1",
+    "react-redux": "^5.1.1",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "react-scripts": "3.1.1",
+    "react-select": "^2.2.0",
+    "react-toasts": "^3.0.4",
+    "react-toggle": "^4.0.2",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.4",
+    "redux-act": "^1.7.7",
+    "redux-logger": "^3.0.1",
+    "redux-saga": "^0.15.6",
+    "redux-saga-router": "^2.2.0",
+    "reselect": "^4.0.0",
+    "schema-utils": "^2.1.0",
+    "short-id": "0.1.0-1",
+    "styled-components": "^4.4.0",
+    "styled-system": "^5.1.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
