--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "@emotion/core": "^10.0.16",
     "axios": "^0.19.0",
     "babel-preset-es2015": "^6.24.1",
+    "firebase": "^7.7.0",
     "formik": "^2.0.3",
     "history": "^4.10.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "plow-js": "^2.2.0",
     "ramda": "^0.26.1",
     "re-reselect": "^1.0.1",
     "react": "^16.9.0",
-    "react-country-region-selector": "^1.4.3",
-    "react-datepicker": "^2.0.0",
     "react-dom": "^16.9.0",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^5.1.1",
@@ -29,14 +29,9 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-act": "^1.7.7",
-    "redux-logger": "^3.0.1",
-    "redux-saga": "^0.15.6",
-    "redux-saga-router": "^2.2.0",
+    "redux-logger": "^3.0.6",
     "reselect": "^4.0.0",
     "schema-utils": "^2.1.0",
-    "short-id": "0.1.0-1",
-    "styled-components": "^4.4.0",
-    "styled-system": "^5.1.0",
     "yup": "^0.27.0"
   },
   "scripts": {
