--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "3.1.1",
     "react-select": "^2.2.0",
+    "react-infinite-scroll-component": "4.1.0",
     "react-toastify": "^5.4.0",
     "react-toasts": "^3.0.4",
     "react-toggle": "^4.0.2",
